add flow faire jpeg file and hamburger menu

--- a/events.html
+++ b/events.html
@@ -9,20 +9,25 @@
 </head>
 
 <body>
-    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  <div class="navbar">
-        <div>
-        <a href="about.html">ABOUT</a>
-        <a href="blog.html">BLOG</a>
-        <a href="contact.html">CONTACT</a>
-        <a href="events.html">EVENTS</a>
+    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
+    <nav class="navbar">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
         </div>
-    </div>
+        <ul class="nav-list">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+        </ul>
+      </nav>
     </div>
   
 
     <div class="main-content">
         <div class="title">Events</div>
-          <!-- Slideshow container -->
 
   
   
