--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,26 @@
 </head>
 
 <body>
-    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  <div class="navbar">
-        <div>
-        <a href="about.html">ABOUT</a>
-        <a href="blog.html">BLOG</a>
-        <a href="contact.html">CONTACT</a>
-        <a href="events.html">EVENTS</a>
+    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
+    <nav class="navbar">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
         </div>
-    </div>
+        <ul class="nav-list">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+        </ul>
+      </nav>
     </div>
   
 
     <div class="main-content">
         <div class="title">Contact</div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScp4RqFvVUlY69gO9kJSlFALAJbTlAtgUSYsXXh-v0RClqJGA/viewform?embedded=true" width="640" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      
       
     </div>
   
