--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 
 <body>
-<div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  <div class="navbar">
-    <div>
-    <a href="about.html">ABOUT</a>
-    <a href="blog.html">BLOG</a>
-    <a href="contact.html">CONTACT</a>
-    <a href="events.html">EVENTS</a>
-    </div>
+<div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
+
+<nav class="navbar">
+  <div class="hamburger-menu">
+      <div class="line line-1"></div>
+      <div class="line line-2"></div>
+      <div class="line line-3"></div>
+  </div>
+  <ul class="nav-list">
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="blog.html">BLOG</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="events.html">EVENTS</a></li>
+  </ul>
+</nav>
+
 </div>
-</div>
+
   
 
     <div class="main-content">
@@ -57,3 +66,4 @@
     </footer>
 </body>
     </html>
+
