--- a/events.html
+++ b/events.html
@@ -28,7 +28,26 @@
 
     <div class="main-content">
         <div class="title">Events</div>
-
+        
+        <div class="calendar-container">
+            <div class="calendar-header">
+                <button id="prevMonth">&lt; Prev</button>
+                <h2 id="monthYear"></h2>
+                <button id="nextMonth">Next &gt;</button>
+            </div>
+            <div class="days-of-week">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tue</div>
+                <div>Wed</div>
+                <div>Thu</div>
+                <div>Fri</div>
+                <div>Sat</div>
+            </div>
+            <div id="calendarDays" class="calendar-days"></div>
+        </div>
+        
+        <script src="calendar.js"></script>
   
   
     <footer>
