Added individual event pages

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,28 @@
   
   
     <footer>
-        &copy; 2024 Wicked Loud. All rights reserved.
-    </footer>
+        <div class="footer-container">
+          <div class="footer-column1">
+            <h3>CONTACT</h3>
+            <p>314 E 13th Ave<br>Dallas, TX 75201</p>
+  
+            <a href="contact.html">Contact Us</a>
+          </div>
+          <div class="footer-column2">
+              <h3>WICKED LOUD BOOKING</h3>
+                <a href="about.html">ABOUT</a>
+                <a href="blog.html">BLOG</a>
+               <a href="contact.html">CONTACT</a>
+               <a href="events.html">EVENTS</a>         
+          </div>
+          <div class="footer-column3">
+              <h3>SOCIAL</h3>
+              <a href="https://www.facebook.com">Facebook</a>
+              <a href="https://www.instagram.com">Instagram</a>
+              <a href="https://www.twitter.com">Twitter</a>
+          </div>
+      </div>
+          &copy; 2024 Wicked Loud. All rights reserved.
+      </footer>
 </body>
     </html>
