--- a/contact.html
+++ b/contact.html
@@ -9,20 +9,14 @@
 </head>
 
 <body>
-    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
-    <nav class="navbar">
-        <div class="hamburger-menu">
-            <div class="line line-1"></div>
-            <div class="line line-2"></div>
-            <div class="line line-3"></div>
+    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  <div class="navbar">
+        <div>
+        <a href="about.html">ABOUT</a>
+        <a href="blog.html">BLOG</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="events.html">EVENTS</a>
         </div>
-        <ul class="nav-list">
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="events.html">EVENTS</a></li>
-        </ul>
-      </nav>
+    </div>
     </div>
   
 
@@ -34,7 +28,28 @@
   
   
     <footer>
-        &copy; 2024 Wicked Loud. All rights reserved.
-    </footer>
+        <div class="footer-container">
+          <div class="footer-column1">
+            <h3>CONTACT</h3>
+            <p>314 E 13th Ave<br>Dallas, TX 75201</p>
+  
+            <a href="contact.html">Contact Us</a>
+          </div>
+          <div class="footer-column2">
+              <h3>WICKED LOUD BOOKING</h3>
+                <a href="about.html">ABOUT</a>
+                <a href="blog.html">BLOG</a>
+               <a href="contact.html">CONTACT</a>
+               <a href="events.html">EVENTS</a>         
+          </div>
+          <div class="footer-column3">
+              <h3>SOCIAL</h3>
+              <a href="https://www.facebook.com">Facebook</a>
+              <a href="https://www.instagram.com">Instagram</a>
+              <a href="https://www.twitter.com">Twitter</a>
+          </div>
+      </div>
+          &copy; 2024 Wicked Loud. All rights reserved.
+      </footer>
 </body>
     </html>
