edits corrections in text

--- a/events.html
+++ b/events.html
@@ -38,14 +38,14 @@
                                 <img src="djhippo.jpeg" alt="DJ Drop Doc & DJ Hippo">
                                 <a href="dropdoc.html">DJ Drop Doc & DJ Hippo</a>
                             </td>
-                            <td>March 15 2024</td>
+                            <td>March 15, 2024</td>
                         </tr>
                         <tr>
                             <td>
                                 <img src="Flowfaire.jpeg" alt="Flow Faire 2024 Festival">
                                 <a href="flowfaire.html">Flow Faire Dallas Bass Festival</a>
                             </td>
-                            <td>March 22-24 2024</td>
+                            <td>March 22-24, 2024</td>
                         </tr>
                        
                     </tbody>
