--- a/flowfaire.html
+++ b/flowfaire.html
@@ -30,7 +30,7 @@
   
 
     <div class="main-content">
-        <div class="title">DJ Hippo & DropDoc</div>
+        <div class="title">Flow Faire 2024 Dallas</div>
         <div class="flex-event"> <!--display as row-->
               <div class="event-flyer"><img src="Flowfaire.jpeg" style="width:100%">
   
