--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wicked Loud</title>
-<link rel="stylesheet" href="wicked.css">
-<script src="wicked.js"></script>
-</head>
-
-<body>
-    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  <div class="navbar">
-        <div>
-        <a href="about.html">ABOUT</a>
-        <a href="blog.html">BLOG</a>
-        <a href="contact.html">CONTACT</a>
-        <a href="events.html">EVENTS</a>
-        </div>
-    </div>
-    </div>
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wicked Loud</title>
+    <link rel="stylesheet" href="wicked.css">
+    <script src="app.js"></script>
+    </head>
+    
+    <body>
+    <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
+    
+    <nav class="navbar">
+      <div class="hamburger-menu">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+          <div class="line line-3"></div>
+      </div>
+      <ul class="nav-list">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="events.html">EVENTS</a></li>
+      </ul>
+    </nav>
   
 
     <div class="main-content">
