--- a/events.html
+++ b/events.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wicked Loud</title>
-<link rel="stylesheet" href="wicked.css">
-<script src="wicked.js"></script>
-</head>
-
-<body>
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wicked Loud</title>
+    <link rel="stylesheet" href="wicked.css">
+    <script src="app.js"></script>
+    </head>
+    
+    <body>
     <div class="header"><a href="index.html"><div><img id="wickedlogo" src="wickedlogo.png" alt="Wicked Loud booking company logo"></a></div>  
+    
     <nav class="navbar">
-        <div class="hamburger-menu">
-            <div class="line line-1"></div>
-            <div class="line line-2"></div>
-            <div class="line line-3"></div>
-        </div>
-        <ul class="nav-list">
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="events.html">EVENTS</a></li>
-        </ul>
-      </nav>
-    </div>
+      <div class="hamburger-menu">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+          <div class="line line-3"></div>
+      </div>
+      <ul class="nav-list">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="events.html">EVENTS</a></li>
+      </ul>
+    </nav>
   
 
     <div class="main-content">
@@ -56,9 +56,9 @@
 
         <div class="calendar-container">
             <div class="calendar-header">
-                <button id="prevMonth">&lt; Prev</button>
+                <button id="prevMonth">&lt; </button>
                 <h2 id="monthYear"></h2>
-                <button id="nextMonth">Next &gt;</button>
+                <button id="nextMonth"> &gt;</button>
             </div>
             <div class="days-of-week">
                 <div>Sun</div>
