--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="sitelock-site-verification" content="6047" />
 <title>Wicked Loud</title>
 <link rel="stylesheet" href="wicked.css">
 <script src="app.js"></script>
